--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "super blog sur node.js, PS node c'est fun",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Greg",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0"
+  }
 }
